Thu Jul 22 08:20:36 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
        * connectors/dds4ccm/tests/QueryCondition/DDS/*:
          Added a small reproducer which should reproduce the time out
          which occurs after setting the query parameters.

        * connectors/dds4ccm/tests/QueryCondition/TwoQueries/Receiver/QCTQ_Test_Receiver_exec.cpp:
          Got this one working. The reproducer will log an error about
          the unexpected timeout.

Thu Jul 22 03:55:53 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/MPC/config/dance_shs_daemon.mpb:
        * DAnCE/MPC/config/dance_shs_stub.mpb:
        * DAnCE/Plan_Launcher/Daemon/PL_Daemon.idl:
        * DAnCE/Plan_Launcher/Daemon/PL_Daemon.mpc:
        * DAnCE/tools/System_Health/Daemon/SHS_Daemon.idl:
        * DAnCE/tools/System_Health/Daemon/SHS_Daemon.mpc:
        * DAnCE/tools/System_Health/Interceptors/SHS_Interceptor.h:
        * DAnCE/tools/System_Health/SHS_DataModel.idl:
        * DAnCE/tools/System_Health/System_Health.mpc:

          Fuzz.

Wed Jul 21 11:44:19 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Listen_T.h:
        * connectors/dds4ccm/impl/DDS_Listen_T.cpp:
        * connectors/dds4ccm/impl/DataReaderListener_T.h:
        * connectors/dds4ccm/impl/DataReaderListener_T.cpp:
          DataControlListener is now by value (instead of by reference).

Wed Jul 21 07:50:29 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * DAnCE/tools/System_Health/Interceptors/SHS_CORBA_Transport.cpp:
          Resolved compile error.

        * DAnCE/tools/System_Health/Interceptors/SHS_Interceptor.cpp:
          Resolved compile warning.

Tue Jul 20 23:22:50 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/MPC/config/dance_shs_daemon.mpb:
        * DAnCE/MPC/config/dance_shs_stub.mpb:

          Files missing from previous commit.
