@@ -236,7 +236,7 @@
           <kind>tk_ulong</kind>
         </type>
         <value>
-          <ulong>1</ulong>
+          <ulong>10</ulong>
         </value>
       </value>
     </configProperty>
@@ -303,6 +303,17 @@
         </value>
       </value>
     </configProperty>
+    <configProperty>
+      <name>domain_id</name>
+      <value>
+        <type>
+          <kind>tk_long</kind>
+        </type>
+        <value>
+          <long>0</long> <!-- 0 to work with RTI shapes demo-->
+        </value>
+      </value>
+    </configProperty>
   </instance>
 
   <instance xmi:id="Shapes_ReceiverConnectorInstance">
@@ -319,6 +330,17 @@
         </type>
         <value>
           <string>Square</string>
+        </value>
+      </value>
+    </configProperty>
+    <configProperty>
+      <name>domain_id</name>
+      <value>
+        <type>
+          <kind>tk_long</kind>
+        </type>
+        <value>
+          <long>0</long> <!-- 0 to work with RTI shapes demo-->
         </value>
       </value>
     </configProperty>
