@@ -12,8 +12,8 @@
 
 module Shapes
 {
-  typedef sequence<ShapeType_msg> ShapeType_msgSeq;
-  module ::CCM_DDS::Typed < ::ShapeType_msg, ShapeType_msgSeq> ShapeType_conn;
+  typedef sequence<ShapeType> ShapeTypeSeq;
+  module ::CCM_DDS::Typed < ::ShapeType, ShapeTypeSeq> ShapeType_conn;
 };
 
 #endif /* SHAPES_SHAPETYPE_CONN_IDL_ */
