@@ -31,7 +31,7 @@
     </ul>
     In this tutorial RTI DDS is used to transfer data from the sender to the receiver.
     Since the sender and receiver are separate components, each use a DDS4CCM connector.<br/>
-    The exchanged data consists of a struct (ShapeType_msg) with the following
+    The exchanged data consists of a struct (ShapeType) with the following
     members:
     <ul>
       <li>color : represents the color of the shape.</li>
@@ -52,10 +52,8 @@
   </p>
   <img width="60%" height="40%" src="./images/system.png" />
   <p>
-    This tutorial doesn't work in conjuntion with the RTI Shapes demo
-    (available for download from http://www.rti.com/downloads/index.html). One
-    can use the Shapes example (%CIAO_ROOT%\connectors\dds4ccm\examples\Shapes)
-    for this.
+    This tutorial works in conjuntion with the RTI Shapes demo
+    (available for download from http://www.rti.com/downloads/index.html).
   </p>
 
   <h2>Directory structure</h2>
